[package]
name = "run_oci"
version = "0.1.0"
authors = ["Dylan Reid <dgreid@chromium.org>"]

[dependencies]
container = { path = "../container" }
container_config_reader = { path = "../container_config_reader" }
getopts = "*"
nix = { git = "http://github.com/nix-rust/nix.git" }
serde = "*"
serde_json = "*"
